Fix JPA issue